--- a/02.Angular.md
+++ b/02.Angular.md
@@ -1,11 +1,12 @@
 # Angular
-* Angular 버저닝
-* 컴포넌트 기반
-* 모듈 로딩
+* [Angular 버저닝](#angular-버저닝)
+* [컴포넌트 기반](#컴포넌트-기반)
+* [모듈 로딩](#모듈-로딩)
 * zone.js 변경 감지
 * 서버 사이드 렌더링
 * 웹워커
 * AOT 컴파일과 Tree Shaking
+
 
 ## Angular 버저닝  
 > *AngularJS에서 Angular로, Angular 2에서 3을 뛰어 넘어 Angular 4로, 중간 중간 마이너 버전과 메이저 버전의 업데이트까지 Angular의 버저닝은 개발자들에게 혼란을 줄 수 있는 여지가 많다. 왜 이렇게 복잡할까?*
