--- a/docs/study/02.Angular.md
+++ b/docs/study/02.Angular.md
@@ -162,7 +162,7 @@ Angular 모듈은 Angular의 다양한 기능 요소들을 묶는 단위이다. 
 > Angular는 데이터와 뷰 간의 바인딩을 통해 상호 갱신을 자동화한다.  
 > 여기서 상호 갱신이란 한 요소에 변경이 생기면 다른 요소에도 그 변경을 반영한다는 것이다.  
 > 자, 그렇다면 한 요소가 변경되는 것은 어떻게 감지할 것인가?, 기능성이나 효율성을 따지게 된다면 이것은 꽤나 어려운 문제이다.   
-## 기존의 변경 감지
+### 기존의 변경 감지
 * HTML 엘리먼트에는 사용자의 조작이나 기타 상황에 대해 이벤틀 통지하는 메커니즘이 존재한다.  
 * 예를 들어, onclick 속성이나 addEventListener 메소드를 통해 이벤트 핸들러를 등록하고 해당 이벤트 발생 시 핸들러를 호출해 주는 방식이 있을 것이다.  
 * 이렇게 뷰는 자신이 변경되는 것을 통지해주는 장치가 있다. 하지만 데이터가 변경되었다고 통지해주는 메커니즘은 자바스크립트에서 존재하지 않는다.
@@ -178,27 +178,26 @@ Angular 모듈은 Angular의 다양한 기능 요소들을 묶는 단위이다. 
 * 그래서 AngularJS API에서는 각종 상황에 대한 디렉티브나 서비스들이 구현되어 있고, 개발자는 이것들을 이용해 처리하게 되면 변경 감지 프로세스를 구동시켜 주는 것이다.
 * 하지만 AngularJS 외의 라이브러리에서 데이터를 변경하는 상황이라면 변경 감지는 할 수 없다. 그렇기 때문에 scope.$apply()를 호출해야 하는 번거로움이 있었다.
 * 또한 변경될 만한 상황이 잘 감지 되었다해도 scope라는 중간 저장공간에 있는 것들에 대해 모두 변경 여부를 확인하는 작업을 거치게 된다.
-## zone.js
-### 무엇
+### zone.js
+#### 무엇
 * zone.js는 비동기 요청 등을 발생시키는 브라우저 Native API에 대해 몽키패치를 한다. 그래서 호출되는 모든 Native API 요청을 추적한다. 그래서 일련의 비동기 요청들을 하나의 컨텍스트로 묶어 준다.
 * zone.js는 일련의 컨텍스트를 구역(Zone)이라는 용어로 분리하며 하나의 구역 안에서 실행되는 비동기 요청들은 모두 하나의 컨텍스트로 추적할 수 있다.
 * zone.js의 브라우저 Native API에 대해 몽키패치하는 이런 구현 덕에 브라우저 Native API 호출이 되었을 때 이를 통지받을 수 있는 기능도 제공한다.
-### Angular에서는
+#### Angular에서는
 * Angular는 어플리케이션 시작 시 zone.js의 구역(zone)을 하나 만들어 이 구역에서 어플리케이션을 구동시킨다.
 * 따라서 브라우저 Native API 호출에 대해 통지를 받을 수 있게 되고 변경 감지(Change Detection)이 가능하게 된다.
 * 하지만 이것은 변경 감지를 수행할 시점을 알려 줄 뿐이고 어떤 것이 변경되었는지는 알지 못하는 상태이다.
 * Angular 역시 AngularJS처럼 변경 감지 시점에 루트에서부터 차례로 검사해야 한다.
 * Angular는 클래스 멤버가 바인딩 컨텍스트이기 때문에 컴포넌트를 대상으로 변경 감지를 한다.
 * Angular에서 변경 감지 대상은 Input 데코레이터가 붙어 있는 변수, 컴포넌트 클래스의 @Input 멤버 변수이다.
-### 보다 빠른 변경 감지
+#### 보다 빠른 변경 감지
 * 그렇다면 어떻게 Chage Detection을 효율적으로 실행할 수 있을까?
 * 앞서 설명했듯이 CD는 Runtime시 각 컴포넌트마다 생성되기 때문에 다양한 형태를 가질 수 있다. 각 컴포넌트의 구조에 맞게 CD 클래스를 정의 하고 생성하기 때문에, CD가 감시해야할 대상을 줄이면 성능을 높일 수 있다. 
 * Angular는 CD가 감시해야 할 대상을 줄이기 위해 Immutable 객체와 Observable 객체를 알아보고 감시 대상에서 제외해 할 수 있는데, 이런 최적화는 Angular의 OnPush 전략(컴포넌트에 바인딩된 Input 값의 변화가 없는 경우에는 Subtree 에 대해 Change Detection을 하지 않음)으로 설정하여 처리한다.
-### immutable
+#### immutable
 * Immutable 객체는 값의 변화가 없음을 보장한다. 새로운 값을 지정하고 싶으면 객체를 변경하는 것이 아니라 새로 생성 해야만한다.
 * 객체를 새로 생성한다는 것은 Angular 입장에서 값(상태) 비교가 필요 없다는 것을 뜻한다. Immutable 객체를 사용하는 바인딩된 컴포넌트들은 변경된 객체의 상태를 비교해 볼 필요 없이 객체의 레퍼런스만으로 변화를 감지할 수 있다. 
 * (Javascript Immutable lib들을 이용하여 손쉽게 Immutable 객체를 생성해 볼 수 있는다. Immutable.js Github)
-
 
 
 ![https://q.vtable.org/semantic-versioning-cool-concept-buuuut/](/img/zone.png)  
